fix: vendor card dark mode styling

--- a/src/app/thekas/thekas.module.css
+++ b/src/app/thekas/thekas.module.css
@@ -1,5 +1,5 @@
 .vendorCard {
-    @apply bg-white px-4 py-4 rounded shadow-sm ease-in-out duration-200 hover:shadow-md flex mx-2 my-4 flex-col hover:-translate-y-1;
+    @apply bg-white px-4 py-4 rounded shadow-sm ease-in-out duration-200 hover:shadow-md flex flex-col mx-2 my-4 dark:bg-slate-900 dark:border-slate-500 dark:border hover:-translate-y-1;
 }
 
 .vendorCardPill {
